--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_subdirectory(rubberband)
+cmake_minimum_required(VERSION 3.26)
+
+project(rubberband-tests VERSION 0.0.0)
+
 add_subdirectory(rubberband-cmake)
+add_subdirectory(saint)
