--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.26)
 
 project(rubberband-tests VERSION 0.0.0)
 
+add_subdirectory(JUCE)
 add_subdirectory(rubberband-cmake)
 add_subdirectory(saint)
