--- a/saint/CMakeLists.txt
+++ b/saint/CMakeLists.txt
@@ -1,8 +1,11 @@
+add_subdirectory(wavfile)
+
 add_executable(rubberband-tests
   main.cpp
 )
 
 target_link_libraries(rubberband-tests
   PRIVATE
+    wavfile
     rubberband-cmake
 )
