--- a/saint/CMakeLists.txt
+++ b/saint/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(wavfile)
 
 add_executable(rubberband-tests
   main.cpp
+  TimeStretchingRunner.cpp
 )
 
 target_link_libraries(rubberband-tests
